--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/react-dom": "^2.0.8",
     "@mui/icons-material": "latest",
     "@mui/material": "^5.15.10",
     "@tanstack/react-query": "^5.22.2",
